Revision history for CourtIO-Pod-OpenAPI

{{$NEXT}}

"0.08  2020-06-26"
  - Drop git submodule and just build on top of CourtIO::YAML::PP's docker file

"0.07  2020-06-26"
  - Use CourtIO::YAML::PP for includes support

"0.06  2020-04-05"
  - Add support for default paths and path prefixes for routes
  - Use perl subroutine signatures

"0.05  2020-04-04"
  - Don't use PRESERVE_ORDER, sorted output is more consistent

"0.04  2020-04-03"
  - Allow x-mojo-to to be either @method_name or @#method_name.
  - Add some basic sanity checking on each parsed openapi node

"0.03  2020-04-03"
  - Sort paths in output by path name.  YAML spec of each path is still in
    "preserve order" mode

"0.02  2020-04-02"
  - Don't include "paths" key in the output.

"0.01  2020-03-31"
  - Initial version