@@ -1,6 +1,7 @@
 Revision history for CourtIO-Pod-OpenAPI
 
 {{$NEXT}}
+  - Add support for =for :parameters to specify common path params
 
 "0.08  2020-06-26"
   - Drop git submodule and just build on top of CourtIO::YAML::PP's docker file
